k8s/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-postgres
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
