k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracker-service
spec:
  selector:
    app: tracker
  ports:
    - port: 80
      targetPort: 8000
