k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # thanks to that it is visible to Ingress Controller
  rules:
    - host: tracker-local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracker-service
                port:
                  number: 8000  # the port where Service listens to
